# kernel-farm

./: .farmrc  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  configure.ac  farm-checkout  farm-checkout.in  farm-clean  farm-clean.in  farm-compile  farm-compile.in  farm-config  farm-config.in  farm-config32  farm-config64  farm-hardlink  farm-hardlink.in  farm-lib.sh  farm-patch.in  farm-warnings  farm.conf  meta
kernel-patches/: 0001-makefile-config-2.6.14.patch  0002-makefile-config-2.6.18.patch  0003-cmpxchg-3.3.patch  0004-include-limits-h.patch  0005-compiler-gcc5-2.6.13.patch  0006-compiler-gcc5-2.6.29.patch  0007-compiler-gcc5-2.6.30.patch  0008-compiler-gcc5-2.6.35.patch  0009-compiler-gcc5-3.18.patch  0010-compiler-gcc5-3.9.patch  0011-pgtable-2.6.14.patch  Makefile.am
patches/: 338  cc  farmbin  initial  installrc  introduce-ucflags  linux  linux33  make  mirror  orinoco  patch-p1  reconfig  refresh-temp  sort  status  summary  ticks
