#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([kernel-farm], [0.1], [proski@gnu.org])
AC_CONFIG_SRCDIR([farm-config.in])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([farm-checkout], [chmod +x farm-checkout])
AC_CONFIG_FILES([farm-clean], [chmod +x farm-clean])
AC_CONFIG_FILES([farm-compile], [chmod +x farm-compile])
AC_CONFIG_FILES([farm-config], [chmod +x farm-config])
AC_CONFIG_FILES([farm-hardlink], [chmod +x farm-hardlink])
AC_OUTPUT
