patchdir = $(pkgdatadir)/kernel-patches

dist_patch_DATA = \
	0001-makefile-config-2.6.14.patch \
	0002-makefile-config-2.6.18.patch \
	0003-cmpxchg-3.3.patch \
	0004-include-limits-h.patch \
	0005-compiler-gcc5-2.6.13.patch \
	0006-compiler-gcc5-2.6.29.patch \
	0007-compiler-gcc5-2.6.30.patch \
	0008-compiler-gcc5-2.6.35.patch \
	0009-compiler-gcc5-3.18.patch \
	0010-compiler-gcc5-3.9.patch
